Fix jumping details modal on back navigation (#854)

--- a/bookmarks/styles/theme/modals.css
+++ b/bookmarks/styles/theme/modals.css
@@ -33,7 +33,7 @@
       cursor: default;
       display: block;
       left: 0;
-      position: absolute;
+      position: fixed;
       right: 0;
       top: 0;
     }
